[DDW-1071] Fixes z-index of network information icon

--- a/source/renderer/app/components/sidebar/SidebarCategory.scss
+++ b/source/renderer/app/components/sidebar/SidebarCategory.scss
@@ -77,7 +77,7 @@
   position: absolute;
   transition: width 0.2s ease-out;
   width: 71px;
-  z-index: 100;
+  z-index: 19;
 
   &:hover {
     background-color: var(
